fix: change header elements z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@
 /* AK - согласно ТЗ элементы title, subtitle должны быть поверх других блоков на малых разрешениях,
 поэтому создал модификатор к блоку хедер для этого эффекта */
 .header_overlay {
-  z-index: 1;
+  z-index: 2;
 }
 
 /* AK - создал элемент подзаголовка согласно ТЗ (стр. 3 п. 3, стр. 4 п. 2) */
@@ -89,6 +89,9 @@
   background-size: cover;
   width: 765px;
   height: 608px;
+  /* AK - по макету блок идет над синим квадратом, но должен быть "ниже" заголовка и подзаголовка,
+  поэтому зет-индекс тут будет 1, а в заголовке и подзаголовке - 2 */
+  z-index: 1;
 }
 
 /* Яндекс - ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
